// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:button-group 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          The form
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <label
            class="a-Form-label"
          >
            <span>
              单选
            </span>
          </label>
          <div
            class="a-ButtonGroupControl a-Form-control"
          >
            <div
              class="a-ButtonGroup"
            >
              <button
                class="a-Button a-Button--default"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="a-Button a-Button--default"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <label
            class="a-Form-label"
          >
            <span>
              当前值
            </span>
          </label>
          <div
            class="form-control-static"
          >
            <div
              class="a-Form-control"
            >
              <span
                class="a-TplField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          The form
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <label
            class="a-Form-label"
          >
            <span>
              多选
            </span>
          </label>
          <div
            class="a-ButtonGroupControl a-Form-control"
          >
            <div
              class="a-ButtonGroup"
            >
              <button
                class="a-Button a-Button--primary is-active"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="a-Button a-Button--primary is-active"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <label
            class="a-Form-label"
          >
            <span>
              当前值
            </span>
          </label>
          <div
            class="form-control-static"
          >
            <div
              class="a-Form-control"
            >
              <span
                class="a-TplField"
              >
                a,b
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 2`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          The form
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <label
            class="a-Form-label"
          >
            <span>
              多选
            </span>
          </label>
          <div
            class="a-ButtonGroupControl a-Form-control"
          >
            <div
              class="a-ButtonGroup"
            >
              <button
                class="a-Button a-Button--primary is-active"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="a-Button a-Button--default"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="a-Form-item a-Form-item--normal"
        >
          <label
            class="a-Form-label"
          >
            <span>
              当前值
            </span>
          </label>
          <div
            class="form-control-static"
          >
            <div
              class="a-Form-control"
            >
              <span
                class="a-TplField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
